Clean up some of the methods and fix tests