@@ -2,24 +2,25 @@ package com.faforever.client.teammatchmaking;
 
 import com.faforever.client.domain.api.MapVersion;
 import com.faforever.client.domain.api.MatchmakerQueueMapPool;
-import com.faforever.client.domain.server.PlayerInfo;
+import com.faforever.client.domain.server.MatchmakerQueueInfo;
 import com.faforever.client.fx.FxApplicationThreadExecutor;
 import com.faforever.client.fx.JavaFxUtil;
+import com.faforever.client.fx.NodeController;
+import com.faforever.client.map.MapService;
 import com.faforever.client.player.PlayerService;
 import com.faforever.client.theme.UiService;
 import com.faforever.client.util.RatingUtil;
+import javafx.beans.binding.Bindings;
 import javafx.beans.property.DoubleProperty;
+import javafx.beans.property.IntegerProperty;
 import javafx.beans.property.ObjectProperty;
 import javafx.beans.property.SimpleDoubleProperty;
+import javafx.beans.property.SimpleIntegerProperty;
 import javafx.beans.property.SimpleObjectProperty;
 import javafx.beans.value.ObservableValue;
 import javafx.scene.control.ScrollPane;
 import javafx.scene.layout.FlowPane;
 import javafx.scene.layout.Pane;
-
-import com.faforever.client.domain.server.MatchmakerQueueInfo;
-import com.faforever.client.fx.NodeController;
-import com.faforever.client.map.MapService;
 import javafx.scene.layout.VBox;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -27,16 +28,10 @@ import org.springframework.beans.factory.config.ConfigurableBeanFactory;
 import org.springframework.context.annotation.Scope;
 import org.springframework.stereotype.Component;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
-import java.util.SortedMap;
-import java.util.TreeMap;
-import java.util.stream.Collectors;
+import java.util.Map.Entry;
 
 @Slf4j
 @Component
@@ -48,25 +43,39 @@ public class TeamMatchmakingMapListController extends NodeController<Pane> {
   private static final int TILE_SIZE = 125;
   private static final int PADDING = 20;
 
-  private static final Comparator<MapVersion> mapVersionComparator = Comparator.nullsFirst(Comparator.comparing(MapVersion::size))
-                                                          .thenComparing(mapVersion -> mapVersion.map().displayName(),
-                                                                         String.CASE_INSENSITIVE_ORDER);
+  private static final Comparator<MapVersion> MAP_VERSION_COMPARATOR = Comparator.nullsFirst(
+                                                                                     Comparator.comparing(MapVersion::size))
+                                                                                 .thenComparing(
+                                                                                     mapVersion -> mapVersion.map()
+                                                                                                             .displayName(),
+                                                                                     String.CASE_INSENSITIVE_ORDER);
 
-  private static final Comparator<MatchmakerQueueMapPool> mapPoolComparator = Comparator.comparing(MatchmakerQueueMapPool::minRating, Comparator.nullsFirst(Double::compare))
-                                                                   .thenComparing(MatchmakerQueueMapPool::maxRating, Comparator.nullsLast(Double::compare));
+  private static final Comparator<MatchmakerQueueMapPool> MAP_POOL_COMPARATOR = Comparator.comparing(
+                                                                                              MatchmakerQueueMapPool::minRating, Comparator.nullsFirst(Double::compare))
+                                                                                          .thenComparing(
+                                                                                              MatchmakerQueueMapPool::maxRating,
+                                                                                              Comparator.nullsLast(
+                                                                                                  Double::compare));
 
 
   private final MapService mapService;
   private final UiService uiService;
   private final PlayerService playerService;
   private final FxApplicationThreadExecutor fxApplicationThreadExecutor;
+
   private final DoubleProperty maxWidth = new SimpleDoubleProperty(0);
   private final DoubleProperty maxHeight = new SimpleDoubleProperty(0);
-  private final ObjectProperty<SortedMap<MatchmakerQueueMapPool, List<MapVersion>>> sortedBracketsWithDuplicates = new SimpleObjectProperty<>();
-  private final ObservableValue<SortedMap<MatchmakerQueueMapPool, List<MapVersion>>> sortedBrackets = sortedBracketsWithDuplicates.map(this::removeDuplicates);
-  private final ObservableValue<List<MapVersion>> maps = sortedBrackets.map(Map::values).map(values -> values.stream().flatMap(List::stream).toList());
-  private final ObjectProperty<Integer> playerBracketIndex = new SimpleObjectProperty<>(null);
+  private final ObjectProperty<Map<MatchmakerQueueMapPool, List<MapVersion>>> brackets = new SimpleObjectProperty<>(
+      Map.of());
+  private final IntegerProperty playerRating = new SimpleIntegerProperty();
   private final ObjectProperty<MatchmakerQueueInfo> queue = new SimpleObjectProperty<>();
+
+  private final ObservableValue<List<MatchmakerQueueMapPool>> sortedMapPools = brackets.map(this::getSortedMapPools)
+                                                                                       .orElse(List.of());
+  private final ObservableValue<List<MapVersion>> sortedMaps = brackets.map(this::getSortedMaps).orElse(List.of());
+  private final ObservableValue<Integer> playerBracketIndex = Bindings.createObjectBinding(this::calculateBracketIndex,
+                                                                                           sortedMapPools,
+                                                                                           playerRating);
 
   public Pane root;
   public FlowPane tilesContainer;
@@ -81,31 +90,28 @@ public class TeamMatchmakingMapListController extends NodeController<Pane> {
   private void bindProperties() {
     JavaFxUtil.bindManagedToVisible(loadingPane);
 
-    this.queue.subscribe(value -> {
+    this.queue.when(showing).subscribe(value -> {
       if (value == null) {
         return;
       }
       loadingPane.setVisible(true);
       mapService.getMatchmakerBrackets(value).subscribe(rawBrackets -> {
         loadingPane.setVisible(false);
-        this.sortedBracketsWithDuplicates.set(getSortedBrackets(rawBrackets));
+        this.brackets.set(rawBrackets);
       });
     });
 
-    this.sortedBrackets.subscribe(value -> {
-      if (value == null) {
-        return;
-      }
-      PlayerInfo player = playerService.getCurrentPlayer();
-      Integer rating = RatingUtil.getLeaderboardRating(player, getQueue().getLeaderboard());
-      this.updatePlayerBracketIndex(value, rating);
-    });
+    playerRating.bind(playerService.currentPlayerProperty()
+                                   .flatMap(player -> queue.flatMap(MatchmakerQueueInfo::leaderboardProperty)
+                                                           .map(leaderboard -> RatingUtil.getLeaderboardRating(player,
+                                                                                                               leaderboard)))
+                                   .orElse(0)
+                                   .when(showing));
 
-    this.maxWidth.subscribe(this::resizeToContent);
-    this.maxHeight.subscribe(this::resizeToContent);
-
-    this.maps.subscribe(this::updateContent);
-    this.playerBracketIndex.subscribe(this::updateContent);
+    this.maxWidth.when(showing).subscribe(this::resizeToContent);
+    this.maxHeight.when(showing).subscribe(this::resizeToContent);
+    this.sortedMaps.when(showing).subscribe(this::updateContent);
+    this.playerBracketIndex.when(showing).subscribe(this::updateContent);
   }
 
   @Override
@@ -113,98 +119,83 @@ public class TeamMatchmakingMapListController extends NodeController<Pane> {
     return root;
   }
 
-  public double getMaxWidth(){
+  public double getMaxWidth() {
     return this.maxWidth.get();
   }
+
   public void setMaxWidth(double value) {
     this.maxWidth.set(value);
   }
+
   public DoubleProperty maxWidthProperty() {
     return this.maxWidth;
   }
 
-  public double getMaxHeight(){
+  public double getMaxHeight() {
     return this.maxHeight.get();
   }
+
   public void setMaxHeight(double value) {
     this.maxHeight.set(value);
   }
+
   public DoubleProperty maxHeightProperty() {
     return this.maxHeight;
   }
 
-  public MatchmakerQueueInfo getQueue(){
+  public MatchmakerQueueInfo getQueue() {
     return this.queue.get();
   }
+
   public void setQueue(MatchmakerQueueInfo queue) {
     this.queue.set(queue);
   }
+
   public ObjectProperty<MatchmakerQueueInfo> queueProperty() {
     return this.queue;
   }
 
-  private SortedMap<MatchmakerQueueMapPool, List<MapVersion>> getSortedBrackets(Map<MatchmakerQueueMapPool, List<MapVersion>> brackets) {
-    SortedMap<MatchmakerQueueMapPool, List<MapVersion>> sortedMap = new TreeMap<>(mapPoolComparator);
-
-    brackets.forEach((mapPool, mapVersions) -> {
-      List<MapVersion> sortedList = mapVersions.stream().sorted(mapVersionComparator).toList();
-      sortedMap.put(mapPool, sortedList);
-    });
-
-    return sortedMap;
+  private List<MatchmakerQueueMapPool> getSortedMapPools(Map<MatchmakerQueueMapPool, List<MapVersion>> brackets) {
+    return brackets.keySet().stream().sorted(MAP_POOL_COMPARATOR).toList();
   }
 
-  private SortedMap<MatchmakerQueueMapPool, List<MapVersion>> removeDuplicates(SortedMap<MatchmakerQueueMapPool, List<MapVersion>> sortedBrackets) {
-    Set<String> usedMaps = new HashSet<>();
-    return sortedBrackets.entrySet().stream()
-                         .collect(Collectors.toMap(
-                             Map.Entry::getKey,
-                             entry -> entry.getValue().stream()
-                                           .filter(mapVersion -> {
-                                             String name = mapVersion.map().displayName();
-                                             return usedMaps.add(name);
-                                           })
-                                           .collect(Collectors.toList()),
-                             (list1, list2) -> list1,
-                             () -> new TreeMap<>(mapPoolComparator)
-                         ));
+  private List<MapVersion> getSortedMaps(Map<MatchmakerQueueMapPool, List<MapVersion>> map) {
+    return map.entrySet()
+              .stream()
+              .sorted(Entry.comparingByKey(MAP_POOL_COMPARATOR))
+              .flatMap(entry -> entry.getValue().stream().sorted(MAP_VERSION_COMPARATOR))
+              .distinct()
+              .toList();
   }
 
-  private void updatePlayerBracketIndex(SortedMap<MatchmakerQueueMapPool, List<MapVersion>> sortedBrackets, double rating) {
-    if (sortedBrackets == null) {
-      this.playerBracketIndex.set(null);
-      return;
-    }
-    int i = 0;
-    for (Map.Entry<MatchmakerQueueMapPool, List<MapVersion>> entry : sortedBrackets.entrySet()) {
-      MatchmakerQueueMapPool pool = entry.getKey();
-      Double min = pool.minRating();
-      Double max = pool.maxRating();
-      if (min == null) {min = Double.NEGATIVE_INFINITY;}
-      if (max == null) {max = Double.POSITIVE_INFINITY;}
-
-      if (rating < max && rating > min) {
-        this.playerBracketIndex.set(i);
-        return;
-      }
-      i++;
-    }
-    this.playerBracketIndex.set(null);
+  private Integer calculateBracketIndex() {
+    int rating = playerRating.get();
+    List<MatchmakerQueueMapPool> pools = this.sortedMapPools.getValue();
+    return pools.stream()
+                .filter(pool -> pool.minRating() == null || pool.minRating() < rating)
+                .filter(pool -> pool.maxRating() == null || pool.maxRating() > rating)
+                .findFirst()
+                .map(pools::indexOf)
+                .orElse(null);
   }
 
-  private void addMapTile(MapVersion mapVersion, Integer playerBracketIndex) {
-    int i = 0;
+  private Pane createMapTile(MapVersion mapVersion) {
+    Integer playerBracketIndex = this.playerBracketIndex.getValue();
+    List<MatchmakerQueueMapPool> pools = this.sortedMapPools.getValue();
+    Map<MatchmakerQueueMapPool, List<MapVersion>> brackets = this.brackets.get();
     double relevanceLevel = 1;
     if (playerBracketIndex != null) {
-      List<Integer> indexes = new ArrayList<>();
-      for (List<MapVersion> maps : this.sortedBracketsWithDuplicates.get().values()) {
-        if (maps.contains(mapVersion)) {
-          indexes.add(i);
-        }
-        i++;
-      }
-      int diff = Collections.min(indexes.stream().map(idx -> Math.abs(idx - playerBracketIndex)).toList());
-      relevanceLevel = switch (diff) {
+      int bracketDistance = brackets.entrySet()
+                                    .stream()
+                                    .filter(entry -> entry.getValue().contains(mapVersion))
+                                    .map(Entry::getKey)
+                                    .mapToInt(pools::indexOf)
+                                    .filter(index -> index >= 0)
+                                    .map(index -> Math.abs(index - playerBracketIndex))
+                                    .min()
+                                    .orElseThrow();
+
+      relevanceLevel = switch (bracketDistance) {
         case 0 -> 1;
         case 1 -> 0.2;
         default -> 0;
@@ -215,36 +206,40 @@ public class TeamMatchmakingMapListController extends NodeController<Pane> {
         "theme/play/teammatchmaking/matchmaking_map_tile.fxml");
     controller.setRelevanceLevel(relevanceLevel);
     controller.setMapVersion(mapVersion);
-    this.tilesContainer.getChildren().add(controller.getRoot());
+    return controller.getRoot();
   }
 
   private void resizeToContent() {
-    if (this.maps.getValue() == null) {
+    int tilecount = this.sortedMaps.getValue().size();
+    if (tilecount == 0) {
       return;
     }
 
-    int tilecount = this.maps.getValue().size();
     double hgap = tilesContainer.getHgap();
     double vgap = tilesContainer.getVgap();
 
-    int maxTilesInLine = (int) Math.min(10, Math.floor((getMaxWidth() * 0.95 - PADDING * 2 + hgap) / (TILE_SIZE + hgap)));
+    double tileHSize = TILE_SIZE + hgap;
+    double tileVSize = TILE_SIZE + vgap;
 
-    int maxLinesWithoutScroll = (int) Math.floor((getMaxHeight() * 0.95 - PADDING * 2 + vgap) / (TILE_SIZE + vgap));
-    int scrollWidth = 18;
-    double maxScrollPaneHeight = maxLinesWithoutScroll * (TILE_SIZE + vgap) - vgap;
+    int maxTilesInLine = (int) Math.min(10, Math.floor((getMaxWidth() * 0.95 - PADDING * 2 + hgap) / tileHSize));
+    int maxLinesWithoutScroll = (int) Math.floor((getMaxHeight() * 0.95 - PADDING * 2 + vgap) / tileVSize);
+
+    double maxScrollPaneHeight = maxLinesWithoutScroll * tileVSize - vgap;
     this.scrollContainer.setMaxHeight(maxScrollPaneHeight);
 
-    int tilesInOneLine = Math.min(maxTilesInLine, Math.max(Math.max(4, Math.ceilDiv(tilecount, Math.max(1, maxLinesWithoutScroll))), (int) Math.ceil(Math.sqrt(tilecount))));
+    int tilesInOneLine = Math.min(maxTilesInLine,
+                                  Math.max(Math.max(4, Math.ceilDiv(tilecount, Math.max(1, maxLinesWithoutScroll))),
+                                           (int) Math.ceil(Math.sqrt(tilecount))));
     int numberOfLines = Math.ceilDiv(tilecount, tilesInOneLine);
 
-    double preferredWidth = (TILE_SIZE + hgap) * tilesInOneLine - hgap;
-    double gridHeight = (TILE_SIZE + vgap) * numberOfLines - vgap;
+    double preferredWidth = tileHSize * tilesInOneLine - hgap;
+    double gridHeight = tileVSize * numberOfLines - vgap;
 
     if (gridHeight > maxScrollPaneHeight) {
+      int scrollWidth = 18;
       scrollContainer.setPrefWidth(preferredWidth + scrollWidth);
       scrollContainer.setPrefHeight(maxScrollPaneHeight);
-    }
-    else {
+    } else {
       scrollContainer.setPrefWidth(preferredWidth);
       scrollContainer.setPrefHeight(gridHeight);
     }
@@ -253,14 +248,11 @@ public class TeamMatchmakingMapListController extends NodeController<Pane> {
   }
 
   private void updateContent() {
-    List<MapVersion> values = maps.getValue();
-    Integer bracketIndex = this.playerBracketIndex.get();
+    List<Pane> mapTiles = sortedMaps.getValue().stream().map(this::createMapTile).toList();
 
     fxApplicationThreadExecutor.execute(() -> {
-      this.tilesContainer.getChildren().clear();
+      this.tilesContainer.getChildren().setAll(mapTiles);
       this.resizeToContent();
-      values.forEach(mapVersion -> this.addMapTile(mapVersion, bracketIndex));
     });
   }
-
 }
